--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-<<<<<<< HEAD
-__pycache__
-bb3_release
-=======
-__pycache__/
->>>>>>> f88d4e3a95bdcc30d8c9e1b0d927ff2e386e5a73
+# Ignore pycache directory
+pycache/
+
+# Ignore bb3_release directory
+bb3_release/
